--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Fractal by HTML5 UP</title>
+		<title>Nature</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,19 +19,18 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">Fractal</a></h1>
-					<p>Just a simple, single page responsive<br />
-					template brought to you by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1><img src="images/icon.png" alt="Nature" height="165" /></h1>
+					<p><B>NATURE</b> es una impresionante APP de streaming de audio</br>que te conecta con la naturaleza en vivo las 24 horas.</p>
 					<ul class="actions">
-						<li><a href="#" class="button special icon fa-download">Download</a></li>
-						<li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li>
+						<li><a href="#" class="button special icon fa-download">Pronto disponible para descargar</a></li>
+						<!--<li><a href="#one" class="button icon fa-chevron-down scrolly">Acerca de Nature</a></li>-->
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
+				<div class="image phone"><div class="inner"><img src="images/main-screen.png" alt="" /></div></div>
 			</header>
 
 		<!-- One -->
-			<section id="one" class="wrapper style2 special">
+			<!--<section id="one" class="wrapper style2 special">
 				<header class="major">
 					<h2>Sed ipsum magna lorem tempus amet<br />
 					vehicula et gravida elementum</h2>
@@ -41,10 +40,10 @@
 					<li><span class="icon fa-refresh"><span class="label">Process</span></span></li>
 					<li><span class="icon fa-cloud"><span class="label">Upload</span></span></li>
 				</ul>
-			</section>
+			</section>-->
 
 		<!-- Two -->
-			<section id="two" class="wrapper">
+			<!--<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
 						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
@@ -77,10 +76,10 @@
 						</ul>
 					</section>
 				</div>
-			</section>
+			</section>-->
 
 		<!-- Three -->
-			<section id="three" class="wrapper style2 special">
+			<!--<section id="three" class="wrapper style2 special">
 				<header class="major">
 					<h2>Magna leo sapien gravida</h2>
 					<p>Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula<br />
@@ -90,7 +89,7 @@
 					<li><a href="#" class="button special icon fa-download">Download</a></li>
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul>
-			</section>
+			</section>-->
 
 		<!-- Four -->
 		<!--
@@ -414,14 +413,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		-->
 
 		<!-- Footer -->
-			<footer id="footer">
+			<!--<footer id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
 				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
-			</footer>
+			</footer>-->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
