--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><img src="images/icon.png" alt="Nature" height="165" /></h1>
+					<h1><img src="images/icon.png" alt="Nature" height="125" /></h1>
 					<p><B>NATURE</b> es una impresionante APP de streaming de audio</br>que te conecta con la naturaleza en vivo las 24 horas.</p>
 					<ul class="actions">
-						<li><a href="#" class="button special icon fa-download">Pronto disponible para descargar</a></li>
+						<li><img src="images/android-button.png" alt="Android" height="60" /></li>
+						<!--<li><a href="#" class="button special icon fa-download">Pronto disponible para descargar</a></li>-->
 						<!--<li><a href="#one" class="button icon fa-chevron-down scrolly">Acerca de Nature</a></li>-->
 					</ul>
 				</div>
