name app changed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Nature</title>
+		<title>Naturify</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,8 +19,8 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><img src="images/icon.png" alt="Nature" height="125" /></h1>
-					<p><B>NATURE</b> es una impresionante APP de streaming de audio</br>que te conecta con la naturaleza en vivo las 24 horas.</p>
+					<h1><img src="images/icon.png" alt="Naturify" height="125" /></h1>
+					<p><B>NATURIFY</b> es una impresionante APP de streaming de audio</br>que te conecta con la naturaleza en vivo las 24 horas.</p>
 					<ul class="actions">
 						<li><img src="images/android-button.png" alt="Android" height="60" /></li>
 						<!--<li><a href="#" class="button special icon fa-download">Pronto disponible para descargar</a></li>-->
